<resources>
    <string name="app_name">Diva Fitness</string>
    <string name="noConnection">No Internet Connection available.</string>
    <string name="turnOnInternet">Turn On your Internet !!</string>
    <string name="mobileData">Mobile data</string>
    <string name="wifi">WIFI</string>
    <string name="server_error">Sorry Server is facing some technical issues. please try after some time.</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="keep_smiling_and_stay_healthy"><![CDATA[Keep Smiling & Stay Healthy]]></string>
    <string name="enter_your_mobile_no">Enter your \nmobile number</string>
    <string name="you_will_receive_4_digit_code_to_verify_next">You\'ll receive a 4 digit code to verify next.</string>
    <string name="next">Next</string>
    <string name="mobile_no_required">Please Enter Your mobile number to continue.</string>
    <string name="invalid_mobile">Invalid Mobile number</string>
    <string name="enter_code_sent_to_your_number">Enter code sent \nto your number</string>
    <string name="we_sent_it_to_the_number">We sent it to the number [x]</string>
    <string name="dint_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="continue_">Continue</string>
    <string name="about_you">About you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_personal_trainers">Top Personal Trainers</string>
    <string name="view_all">View All</string>
    <string name="book">Book</string>
    <string name="home">Home</string>
    <string name="membership">Membership</string>
    <string name="workout">Workout</string>
    <string name="diet">Diet</string>
    <string name="enable_your_location">Enable Your Location</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="youAreNotUpdatedMessage">A new version is available .Please update to version <b><u><i>[x]</i></u></b>.</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="update">Update</string>

    <string name="min_age">12 years</string>
    <string name="max_age">90 years</string>

    <string name="min_height">1 Feet</string>
    <string name="max_height">10 Feet</string>

    <string name="min_weight">20kg</string>
    <string name="max_weight">300kg</string>

    <string name="years">years</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>


    <string name="our_fitness_center">Our Fitness Center</string>
    <string name="buy_membership">Buy Membership</string>
    <string name="my_schedules">My Schedules</string>
    <string name="cals_left">Cals Left</string>
    <string name="consumed">Consumed</string>
    <string name="proteins">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fat</string>
    <string name="calories">Calories</string>
    <string name="today_diet_plan">Today\'s Diet Plan</string>
    <string name="today_workout">Today\'s Workout</string>
    <string name="your_membership_has_been_expired">Your Membership has been expired on.</string>
    <string name="renew_plan">Renew Plan</string>
    <string name="my_profile">My Profile</string>
    <string name="change_diet_plan">Change Diet Plan</string>
    <string name="change_workout_plan">Change Workout Plan</string>
    <string name="payment_history">Payment History</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate app</string>
    <string name="customer_support">Customer Support</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="sar_amount">SAR [X]/session</string>
    <string name="pay_sar">Pay SAR [X]</string>
    <string name="sar">SAR </string>
    <string name="skip">skip</string>
    <string name="for_package">for</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pick_image_from">Pick Image From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="notification">Notification</string>
    <string name="you_have_unread_notifications"><![CDATA["  <string name=\"you_have_unread_notifications\">You have {number} unread notifications.</string>"]]></string>
    <string name="clear_all">Clear All</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="my_diet_plan">My Diet Plan</string>
    <string name="no_diet_plan_created">No Diet Plan Created</string>
    <string name="create_plan">Create Plan</string>
    <string name="add">Add</string>
    <string name="create_diet_plan">Create Diet Plan</string>
    <string name="view">View</string>
    <string name="hey_name">Hey, [x]</string>
    <string name="welcome_to_diva_fitness">Welcome to Diva Fitness</string>
    <string name="no_diet_available">No Diet Plan Available</string>
    <string name="save">Save</string>
    <string name="edit_diet_plan">Edit Diet Plan</string>
    <string name="personal_trainers">Personal Trainers</string>
    <string name="search_by_name">Search by name</string>
    <string name="no_trainer_avl">No Trainer available</string>
    <string name="filter">Filter</string>
    <string name="select_center">Select Center</string>
    <string name="apply_filter">Apply</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="type_message">Type message</string>
    <string name="specialising_in">Specialising in</string>
    <string name="select_tenure">Select Tenure</string>
    <string name="packages">Package</string>
    <string name="per_session">Per Session</string>
    <string name="read_policy">Read Policy</string>
    <string name="only_me">Only Me</string>
    <string name="with_my_friends">With My Friends</string>
    <string name="no_of_people">No of people</string>
    <string name="about_trainer">About Trainer</string>
    <string name="i_will_join_from">I will join from</string>
    <string name="select_slots">Select Slots</string>
    <string name="month">Month</string>
    <string name="selected">Selected</string>
    <string name="no_of_session">No. of session</string>
    <string name="confirm">Confirm</string>
    <string name="selected_slots">Selected Slots</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="tenure">Tenure</string>
    <string name="joining_from">Joining from</string>
    <string name="remove">Remove</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="payable_amt">Payable Amount</string>
    <string name="auto_renew_membership">Auto Renew membership</string>
    <string name="package_membership">Plus [X] package</string>

    <string name="please_select_slots">Please select slots</string>
    <string name="booking_successfully">Booking Successfully!</string>
    <string name="your_booking_confirm">Your booking has been confirm</string>
    <string name="my_booking">My Bookings</string>
    <string name="back_to_home">Back to home</string>
    <string name="select_branch">Select Branch</string>
    <string name="i_need_personal_trainer">I need Personal Trainer</string>
    <string name="choose_center">Choose the Center</string>
    <string name="vat">VAT</string>
    <string name="people">People</string>
    <string name="session">Session</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="no_membership_avl">No Membership Available</string>
    <string name="book_now">Book Now</string>
    <string name="booking_id">Booking ID #</string>
    <string name="cancel_pt">Cancel PT</string>
    <string name="booking_date">Booking Date:</string>
    <string name="paid">Paid</string>
    <string name="discount">Discount</string>
    <string name="view_direction">View Direction</string>
    <string name="download_invoice">Download invoice</string>
    <string name="rate_now">Rate Now</string>
    <string name="please_buy_membership">Please Buy Membership</string>
    <string name="please_buy_membership_des">Please buy membership for booking with any personal trainer</string>
    <string name="selected_center">Selected Center</string>
    <string name="no_completed_booking">No Completed Booking</string>
    <string name="date">Date:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="mode">Mode:</string>
    <string name="my_workout_plan">My Workout</string>
    <string name="no_workout_created">No Workout Created</string>
    <string name="create_workout">Create Workout</string>
    <string name="edit_workout_plan">Edit Workout Plan</string>
    <string name="no_workout_available">No Workout Available</string>
    <string name="create_workout_plan">Create Workout Plan</string>
    <string name="day_rest">Day Rest</string>
    <string name="reps">Reps</string>
    <string name="set">Set</string>
    <string name="burns">Burns</string>
    <string name="select_slot">[X] Slots</string>
    <string name="g">g</string>
    <string name="on_rest">On Rest</string>
    <string name="am_on_rest">I am on rest!</string>
    <string name="please_add_diet">Please add Diet</string>
    <string name="submit_review">Submit Review</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="poweredby_htf">Powered by</string>

    <string name="please_enter_title">Please enter title</string>
    <string name="please_enter_msg">Please enter message</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_rate_this_booking">Please rate the booking</string>
    <string name="quantity">Quantity:</string>
    <string name="contact_us">Contact Us</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="i_will_do_later">I will do it Later</string>
    <string name="pay_now">Pay Now</string>
    <string name="manage_session">Manage Session</string>
    <string name="you_have_a_booking_with_personal_trainer">You have a booking with Personal Trainer</string>
    <string name="did_not_have_booking_schedule_session">But,you didn\'t schedule sessions</string>
    <string name="available_session">Available Session</string>
    <string name="remaining_session">Remaining Session</string>
    <string name="Schedule_more_sessions">Schedule more Sessions</string>
    <string name="you_havenot_schedule_any_session">You haven\'t schedule any session</string>
    <string name="schedule_session">Schedule Session</string>
    <string name="review">Review</string>
    <string name="feets">Feet</string>
    <string name="you_already_have_membership">You already have a membership</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="select_repetition">Select Repetition</string>
    <string name="select_sets">Select Sets</string>
    <string name="downloading">Downloading…</string>
    <string name="do_you_want_to_open_file">Do you want to open file.</string>
    <string name="freeze_my_subscription">Freeze My Subscription</string>
    <string name="my_subscription">My Subcription</string>
    <string name="joining_date_history">Joining Date History</string>
    <string name="change_joining_date">Change Joining Date</string>

</resources>