<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="editProfileViewModel"
            type="com.htf.diva.auth.viewModel.EditProfileViewModel" />
        <import type="android.view.View" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/llTop"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen_15"
            android:layout_marginEnd="@dimen/dimen_15"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_15"
                android:background="@android:color/transparent"
                android:fontFamily="@font/avenir_black"
                android:gravity="center"
                android:hint="@string/enter_your_name"
                android:text="@={editProfileViewModel.mName}"
                android:textColorHint="@color/colorHintText"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_black"
                    android:text="@string/age"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_14sp" />

                <LinearLayout
                    android:background="@drawable/select_age_bg"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/dimen_15"
                    android:paddingTop="@dimen/dimen_5"
                    android:paddingEnd="@dimen/dimen_15"
                    android:paddingBottom="@dimen/dimen_5"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvEditAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/dimen_5"
                        android:layout_margin="@dimen/dimen_5"
                        android:text="@={editProfileViewModel.mAge}"
                        android:layout_gravity="center"
                        android:fontFamily="@font/avenir_black"
                        android:textStyle="normal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/font_11sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_black"
                        android:textStyle="normal"
                        android:layout_gravity="center"
                        android:text="@string/years"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/font_11sp" />


                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:id="@+id/tvMinAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/min_age"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_10sp" />

                <com.jem.rubberpicker.RubberSeekBar
                    android:id="@+id/editageSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tvMinAge"
                    android:layout_toStartOf="@id/tvMaxAge"
                    app:dampingRatio="0.3"
                    app:defaultThumbInsideColor="@color/white"
                    app:defaultThumbRadius="@dimen/margin_10dp"
                    app:elasticBehavior="cubic"
                    android:layout_marginStart="@dimen/dimen_10"
                    app:highlightTrackColor="@color/colorPrimary"
                    app:highlightTrackWidth="@dimen/dimen_2"
                    app:maxValue="90"
                    app:minValue="12"
                    app:normalTrackColor="@color/colorHintText"
                    app:normalTrackWidth="@dimen/dimen_2"
                    app:stiffness="300"
                    app:stretchRange="@dimen/dimen_15" />


                <TextView
                    android:id="@+id/tvMaxAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/max_age"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_black"
                    android:text="@string/height"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_14sp" />

                <LinearLayout
                    android:background="@drawable/select_age_bg"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/dimen_15"
                    android:paddingTop="@dimen/dimen_5"
                    android:paddingEnd="@dimen/dimen_15"
                    android:paddingBottom="@dimen/dimen_5"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvEditHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_black"
                        android:textStyle="normal"
                        android:text="@={editProfileViewModel.mHeight}"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dimen_5"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/font_11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_black"
                        android:textStyle="normal"
                        android:layout_gravity="center"
                        android:text="@string/feets"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/font_11sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:id="@+id/tvMinHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/min_height"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_10sp" />

                <com.jem.rubberpicker.RubberSeekBar
                    android:id="@+id/editheightSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tvMinHeight"
                    android:layout_toStartOf="@id/tvMaxHeight"
                    app:dampingRatio="0.3"
                    app:defaultThumbInsideColor="@color/white"
                    app:defaultThumbRadius="@dimen/margin_10dp"
                    app:elasticBehavior="cubic"
                    android:layout_marginStart="@dimen/dimen_10"
                    app:highlightTrackColor="@color/colorPrimary"
                    app:highlightTrackWidth="@dimen/dimen_2"
                    app:maxValue="10"
                    app:minValue="1"
                    app:normalTrackColor="@color/colorHintText"
                    app:normalTrackWidth="@dimen/dimen_2"
                    app:stiffness="300"
                    app:stretchRange="@dimen/dimen_15" />


                <TextView
                    android:id="@+id/tvMaxHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/max_height"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_black"
                    android:text="@string/weight"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_14sp" />

                <LinearLayout
                    android:background="@drawable/select_age_bg"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/dimen_15"
                    android:paddingTop="@dimen/dimen_5"
                    android:paddingEnd="@dimen/dimen_15"
                    android:paddingBottom="@dimen/dimen_5"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvEditWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/dimen_5"
                        android:text="@={editProfileViewModel.mWeight}"
                        android:fontFamily="@font/avenir_black"
                        android:textStyle="normal"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dimen_5"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/font_11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_black"
                        android:textStyle="normal"
                        android:layout_gravity="center"
                        android:text="@string/kg"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/font_11sp" />


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:id="@+id/tvMinWeigth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/min_weight"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_10sp" />

                <com.jem.rubberpicker.RubberSeekBar
                    android:id="@+id/editweightSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tvMinWeigth"
                    android:layout_toStartOf="@id/tvMaxWeigth"
                    app:dampingRatio="0.3"
                    app:defaultThumbInsideColor="@color/white"
                    app:defaultThumbRadius="@dimen/margin_10dp"
                    app:elasticBehavior="cubic"
                    android:layout_marginStart="@dimen/dimen_10"
                    app:highlightTrackColor="@color/colorPrimary"
                    app:highlightTrackWidth="@dimen/dimen_2"
                    app:maxValue="300"
                    app:minValue="30"
                    app:normalTrackColor="@color/colorHintText"
                    app:normalTrackWidth="@dimen/dimen_2"
                    app:stiffness="300"
                    app:stretchRange="@dimen/dimen_15" />


                <TextView
                    android:id="@+id/tvMaxWeigth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/max_weight"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_10sp" />

            </RelativeLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_35"
            android:background="@drawable/btn_bg"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_20"
            android:fontFamily="@font/avenir_roman"
            android:paddingStart="@dimen/margin_4dp"
            android:paddingTop="@dimen/margin_12dp"
            android:paddingEnd="@dimen/margin_4dp"
            android:text="@string/save"
            android:paddingBottom="@dimen/margin_12dp"
            android:layout_marginStart="@dimen/dimen_50"
            android:layout_marginEnd="@dimen/dimen_50"
            android:onClick="@{()->editProfileViewModel.onContinueClick()}"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="false">

        </Button>

    </RelativeLayout>

</layout>